--- a/app/static/style.css
+++ b/app/static/style.css
@@ -4,14 +4,22 @@
   box-sizing: border-box;
 }
 
+*::hover {
+  cursor: none;
+}
+
 a {
   text-decoration: none;
+  color: #222222;
 
+}
+main {
+  min-height: 100vh;
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
-  background-color: #f2efeb;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: rgb(235, 235, 235);
 }
 
 #logo {
@@ -19,7 +27,8 @@ body {
 }
 
 header {
-  background-color: #e3ebf2;
+  background-color: ;
+  border-bottom: 2px solid #222222;
   height: 12vh;
   display: flex;
   align-items: center;
@@ -27,26 +36,40 @@ header {
   padding: 3vh
 }
 
-.login-btn {
-  padding: 10px;
-  background-color: #1f73be;
-  border-radius: 5px;
-  box-shadow: 1px 1px 4px black;
+.h-left {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
+.h-left h2 {
+  padding-left: 20px;
+}
+
+.login-btn {
+  padding: 10px;
+  background-color: #FFFFFF;
+  border-radius: 0px;
+  border: 2px solid #222222;
+  box-shadow: -3px 0 10px rgba(0, 0, 0, 0.1);
+}
+.login-btn:hover {
+  background-color: #a1a1a1;
+  color: #FFFFFF;
+  padding: 15px;
+  transition: all 0.3s ease-in-out;
+}
+
+
 footer {
-  position: fixed;
-  height: 10vh;
+  min-height: 15;
   bottom: 0;
   left: 0;
   width: 100%;
-  background: #e3ebf2;
-  color: white;
   text-align: center;
   padding: 10px 0;
-
+  border-top: 2px solid #222222;
   display: flex;
-  align-items: center;
   justify-content: space-between;
   padding: 3vh
 
@@ -54,7 +77,6 @@ footer {
 
 footer div {
   display: flex;
-  align-items: center;
   flex-direction: column;
   margin: 5px;
   padding: 3vh
@@ -64,13 +86,49 @@ footer div a {
   padding: 5px;
 }
 
+.f-links a::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0;
+  height: 100%;
+  background-color: #4d4d4d;
+  transition: width 0.3s ease-in-out;
+  z-index: -1;
+}
+
+.f-links a:hover::after {
+  width: 15px;
+}
+.links:hover {
+  color: #808080;
+  text-decoration: underline;
+  transition: all 0.3s ease-in-out;
+}
+
+
+.f-left {
+  text-align: left;
+}
+.f-right {
+  text-align: right;
+}
+
+/*para manter o footer fora da visão na homepage*/
+
+
+/*Estilo do modal de login*/
 main {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 12vh - 10vh);
-  padding: 20px; /* opcional */
+  height: 100vh;
+  padding: 20px;
   box-sizing: border-box;
+}
+main h1 {
+  padding: 10px;
 }
 
 
@@ -78,15 +136,14 @@ main {
   width: 400px;
   display: flex;
   flex-direction: column;
-  background-color: #e3ebf2;
-  padding: 30px;
+  border: 2px solid #222222;
+  padding: 10px;
 }
 
 .login-form form {
   display: flex;
   flex-direction: column;
   padding: 10px;
-  margin: 10px;
 }
 
 form * {
@@ -99,17 +156,70 @@ form input {
 
 form button {
   padding: 10px;
-  border-radius: 8px;
-  border: none;
-  background-color: #1f73be;
+  border: 2px solid #222222;
+  background-color: #FFFFFF;
 }
 
 form button:hover {
-  cursor: pointer;
+  background-color: #a1a1a1;
+  color: #FFFFFF;
+  transition: all 0.3s ease-in-out;
 }
 
 .flashes {
   padding: 10px;
   text-align: center;
   color: #5c0000;
+}
+
+
+/*Estilo tech*/
+
+.tech {
+  width: 35%;
+  padding: 2rem;
+  color: #333;
+}
+
+.tech h2 {
+  font-size: 1.4rem;
+  color: #222;
+  margin-bottom: 1.5rem;
+  border-bottom: 2px solid #ccc;
+  padding-bottom: 0.5rem;
+}
+
+.tech h3 {
+  font-size: 1rem;
+  margin: 1rem 0 0.5rem;
+  font-weight: 600;
+  color: #444;
+  line-height: 1.4;
+}
+
+.tech ul {
+  margin-left: 1.5rem;
+  margin-bottom: 1rem;
+  list-style-type: disc;
+  color: #444;
+  font-size: 0.95rem;
+}
+
+.tech ul li {
+  margin-bottom: 0.5rem;
+}
+
+.tech p {
+  margin-top: 2rem;
+  font-size: 0.95rem;
+  color: #555;
+}
+
+@media (max-width: 900px) {
+  .tech {
+    position: static;
+    width: 100%;
+    height: auto;
+    box-shadow: none;
+  }
 }
