--- a/app/static/task-style.css
+++ b/app/static/task-style.css
@@ -48,7 +48,7 @@ button:hover {
   background-color: #a1a1a1;
 }
 
-.logout-btn-task {
+.logout-btn-task, #cancel-btn {
   padding: 0.5rem 1rem;
   background-color: #dc3545;
   color: white;
@@ -59,7 +59,37 @@ button:hover {
   background-color: #ff0000;
 }
 
+.modal {
+  display:none; 
+  position:fixed; 
+  top:0; 
+  left:0; 
+  width:100%; 
+  height:100%; 
+  background: rgba(0,0,0,0.5); 
+  justify-content:center;
+  align-items:center;
+}
 
+.modal.open {
+  display: flex;
+}
+
+.modal div {
+  background:white; 
+  padding:1rem 1.5rem; 
+  border-radius:8px; 
+  max-width:400px; 
+  width:90%;
+}
+
+.modal input {
+  width:100%; 
+  padding:0.5rem; 
+  font-size:1rem; 
+  margin-bottom:1rem;
+
+}
 
 
 ul#task-list {
@@ -153,6 +183,7 @@ footer div a {
 .main-holder {
   height: 100vh;
 }
+
 
 
 
