--- a/app/templates/tasks.html
+++ b/app/templates/tasks.html
@@ -7,9 +7,7 @@
 
   <link rel="icon" href="{{ url_for('static', filename='icon.png') }}" type="image/png">
   <link rel="stylesheet" href="{{ url_for('static', filename='task-style.css') }}">
-
-  <!-- JS externo (RECOMENDADO) -->
-  <script src="{{ url_for('static', filename='task-scripts.js') }}" defer></script>
+  
 </head>
 
 <body>
@@ -100,6 +98,7 @@
       <a href="mailto:maicon.costa1331@gmail.com">Email</a>
     </div>
   </footer>
-
+  
+<script src="{{ url_for('static', filename='script.js') }}" defer></script>
 </body>
 </html>
